<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/backgroud_grass">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/flower"
        app:layout_constraintBottom_toTopOf="@+id/b_easy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b_easy"
        android:layout_width="146dp"
        android:layout_height="83dp"
        android:layout_marginBottom="56dp"
        android:onClick="onClick"
        android:text="@string/facile"
        android:background="@drawable/button_scaled"
        app:layout_constraintBottom_toTopOf="@+id/b_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b_normal"
        android:layout_width="146dp"
        android:layout_height="83dp"
        android:layout_marginBottom="56dp"
        android:onClick="onClick"
        android:text="@string/normale"
        android:background="@drawable/button_scaled"
        app:layout_constraintBottom_toTopOf="@+id/b_hard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b_hard"
        android:layout_width="146dp"
        android:layout_height="83dp"
        android:layout_marginBottom="56dp"
        android:onClick="onClick"
        android:text="@string/difficile"
        android:background="@drawable/button_scaled"
        app:layout_constraintBottom_toTopOf="@id/b_ranking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b_ranking"
        android:layout_width="146dp"
        android:layout_height="83dp"
        android:layout_marginBottom="56dp"
        android:onClick="ranks"
        android:text="@string/ranking"
        android:background="@drawable/button_scaled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>