<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_grass"
    tools:context=".RankActivity">

    <TableLayout
        android:id="@+id/rank_layout"
        android:layout_width="0dp"
        android:layout_height="530dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="130dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/titoli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/score"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/time"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/difficulty"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:text="@string/name"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </TableRow>

    </TableLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mainMenu"
        android:layout_width="159dp"
        android:layout_height="74dp"
        android:background="@drawable/button_scaled_small"
        android:onClick="goBack"
        android:soundEffectsEnabled="false"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rank_layout" />

    <ImageButton
        android:id="@+id/audio_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="50dp"
        android:background="#00000000"
        android:contentDescription="@string/todo"
        android:onClick="invertiAudio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mainMenu"
        app:layout_constraintTop_toBottomOf="@+id/rank_layout"
        app:srcCompat="@drawable/audio"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>